# bsdrX

./: .gitignore  ANDROID.md  CMakeLists.txt  COPYING.PLUGIN-EXCEPTION  LICENSE.md  Makefile  PLAN-multiheadset-and-3d.md  PLAN-parity-and-thirdparty-deps.md  PLAN-windows-media.md  README.md  STATUS.md  configure  distribute.sh
android/: settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  bsdr_jni.c
android/app/src/main/java/net/nexlab/bsdrandroid/: AudioIO.kt  BsdrAccessibilityService.kt  BsdrService.kt  BubbleOverlay.kt  CameraCapture.kt  FileSource.kt  MainActivity.kt  NativeBridge.kt  SbsGlPipeline.kt  ScreenCapture.kt  Screenshotter.kt  VoiceMic.kt
android/app/src/main/res/drawable/: bg_screen_tile.xml  dot_live.xml  ic_bubble.xml
android/app/src/main/res/layout/: activity_main.xml  bubble_collapsed.xml  bubble_expanded.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: accessibility_service_config.xml  network_security_config.xml
assets/: bsdrx.rc
cmake/: toolchain-mingw64.cmake  toolchain-osxcross.cmake
docs/: MACOS-SIGNING.md  PLUGIN-ABI.md  WINDOWS-SIGNING.md  android.md  bsdr_agent.1  bsdr_micrelay.1  capture-cloud-session.md  computer-control.md  macos.md
include/bsdr/: acl.h  agentlib.h  app.h  appwindow.h  audio.h  botaudio.h  botmic.h  botprompt.h  botroom.h  botsense.h  browserctl.h  capture.h  capture_pipewire.h  cloud.h  cloud_stream.h  compcontrol.h  control.h  deps.h  depth.h  discovery.h  dtls.h  events.h  faceswap.h  fileaudio.h  filesrc.h  httpc.h  inject.h  input_decode.h  json.h  llm.h  llmctx.h  log.h  mediafx.h  micsniff.h  micsub.h  model_store.h  net.h  overlay.h  platform.h  plugin.h  (+28 more)
installer/: bsdrx.nsi  build-installer.sh  rename-mic.ps1
openwrt/bsdr-micrelay/: Makefile
packaging/: build-deb.sh
plugins/bot_translation/: LICENSE  bot_translation.c
plugins/faceswap/: LICENSE  build.conf  faceswap.c  faceswap_plugin.c
plugins/gpu-cuda/: README.md
plugins/llm/: LICENSE  llm.c
plugins/voice_services/: LICENSE  voice_services.c
protocols/: wlr-gamma-control-unstable-v1.xml
scripts/: bsdr-depth-helper.py  bsdrx-installer.nsi  build-android-deps.sh  build-linux-bundle.sh  build-micrelay.sh  build-model-zips.sh  build-osx-bundle.sh  build-osx-deps.sh  build-osx.sh  build-plugins.sh  build-win-bundle.sh  build-win-deps.sh  fetch-onnx-dml.sh  fetch-onnx-gpu.sh  fetch-onnx.sh  linux-bundle.Dockerfile  mingw-toolchain.cmake  onnx-plugin-link.sh  osx-bundle.Dockerfile  pack-gpu-cuda-plugin.sh  publish-github.sh
scripts/osx/: Dockerfile
src/: acl.c  agent.c  app.c  appwindow.c  audio.c  audio_android.c  audio_coreaudio.c  audio_wasapi.c  botaudio.c  botmic.c  botprompt.c  botroom.c  botsense.c  browserctl.c  bsdr_android.h  capture.c  capture_android.c  capture_pipewire.c  cloud.c  cloud_stream.c  compcontrol.c  control.c  deps.c  depth_onnx.c  discovery.c  dtls.c  faceswap.c  fileaudio.c  filesrc.c  filesrc_android.c  font6x8.h  httpc.c  inject_android.c  inject_linux.c  inject_macos.c  inject_null.c  inject_win.c  input_decode.c  json.c  llm.c  (+45 more)
tests/: test_acl.c  test_audio.c  test_audio_policy.c  test_botprompt.c  test_botsense.c  test_compcontrol.c  test_datachannel.c  test_depth.c  test_input_decode.c  test_llmctx.c  test_mediafx.c  test_micsniff.c  test_moderation.c  test_overlay.c  test_protocol.c  test_roster.c  test_stream.c  test_toolregistry.c  test_tools.c  test_transport.c  test_updatecheck.c  test_video.c  test_voice.c
tools/: audio_test.c  bsdr_micrelay.c  cloud_capture_diff.sh  dtls_probe.c  dump_mic.sh  frida_cloud_cipher.js  quest_sim.c  sctp_init_dump.c  stream_demo.c  test_client.c  video_capture_test.c  voice_test.c
